# fa2s

./: BUILD_STATUS.md  CMakeLists.txt  README.md  build_and_test.sh  fa2s_grammar.bnf  fs2a.md  test_simple.fa2s
examples/: balparen.fa2s  echo.fa2s  reverse.fa2s
examples/slr/: expr.g  readme.md  slr_to_fa2s.py
include/fa2s/: interpreter.hpp
mlir/: CMakeLists.txt  README.md
mlir/cmake/: MLIRConfig.cmake
mlir/include/: CMakeLists.txt
mlir/include/Fa2s/: Fa2sDialect.td  Fa2sOps.td
mlir/include/Fa2s/IR/: Fa2sDialect.cpp.inc  Fa2sDialect.h  Fa2sDialect.h.inc  Fa2sOps.cpp.inc  Fa2sOps.h  Fa2sOps.h.inc
mlir/include/Fa2s/Support/: SourceMgr.h
mlir/lib/: CMakeLists.txt
mlir/lib/Fa2s/IR/: Fa2sDialect.cpp  Fa2sOps.cpp
mlir/lib/Fa2s/Support/: SourceMgr.cpp  SourceMgr_new.cpp  SourceMgr_old.cpp
mlir/test/: expected.mlir  input.fa2s  test.sh
mlir/tools/: CMakeLists.txt
mlir/tools/fa2s-translate/: CMakeLists.txt  fa2s-translate.cpp
src/: interpreter.cpp
tools/: fa2s.py  fa2s_cli.cpp
